<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="35dp"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3"
        tools:ignore="NestedWeights">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_title"
            android:textAlignment="center"
            android:textStyle="normal"
            app:autoSizeMaxTextSize="40dp"
            app:autoSizeMinTextSize="20dp"
            app:autoSizeStepGranularity="2dp"
            app:autoSizeTextType="uniform" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/books"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/bookList"
            android:textAlignment="center"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="25dp"
            app:autoSizeMinTextSize="12dp"
            app:autoSizeStepGranularity="2dp"
            app:autoSizeTextType="uniform" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/wishlist"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/wishlist"
            android:textAlignment="center"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="25dp"
            app:autoSizeMinTextSize="12dp"
            app:autoSizeStepGranularity="2dp"
            app:autoSizeTextType="uniform" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/toplist"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/toplist"
            android:textAlignment="center"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="25dp"
            app:autoSizeMinTextSize="12dp"
            app:autoSizeStepGranularity="2dp"
            app:autoSizeTextType="uniform" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_gravity="end">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            tools:ignore="UselessParent">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="180dp"
                android:layout_height="178dp"
                app:srcCompat="@drawable/reading"
                tools:ignore="ContentDescription" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="40dp"
                android:backgroundTint="#A55A58"
                app:srcCompat="@drawable/ic_add_white_36dp"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />


        </FrameLayout>
    </LinearLayout>


</LinearLayout>